<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- settings -->
    <string name="app_name">Yeah!\nSleepTimer</string>
    <string name="firstloadtitle">Yeah! SleepTimer</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    
    <!-- Feedback -->
    <string name="fbSubject">Feedback Yeah! SleepTimer</string>
	<string name="fbBody">Thank you very much for using my app! Please send mw your opinion!\n\nuseful information\n\Phone:\nAndroid-OS:\nPro:\nCon:\nSuggestions:\nBugs:</string>
    
    <!-- actvitys -->
    <string name="startTitle">Choose an Action</string>
    <string name="wutTitle">Wake Up Time</string>
    <string name="gtbTitle">Go to Bed</string>
    <string name="gtbnTitle">Go to Bed, Now!</string>
    <string name="btn1">Wake up time</string>
    <string name="btn2">Go to Bed time</string>
    <string name="btn3">Go to Bed, Now!</string>
    <string name="btnGo">Go</string>
    <string name="textWUT">Please select a time when you want to wake up.</string>
    <string name="textGTB">Please select a time when you want to go to bed.</string>
    <string name="wut">. Wake-up-time:</string>
    <string name="gtst">. Go-to-sleep-time:</string>
    <string name="sc">. sleep cycle</string>

    <!-- licensedialog -->
    <string name="btnDialogClose">Close</string>
    <string name="l1">Thank you very much for using my app. I use following libraries:</string>
    <string name="l2">Card Library</string>
    <string name="l21">https://github.com/gabrielemariotti/cardslib</string>
    <string name="l22">Apache Version 2.0</string>
    <string name="l3">SystemBarTint Library</string>
    <string name="l31">https://github.com/jgilfelt/SystemBarTint</string>

    <!-- firststartdialog -->
    <string name="firststart_dialog">
	  <![CDATA[
	    <b>Thanks for using my App. Here is a little How-to-use the App. According to scientific findings is a perfect sleep after 5-6 sleep cycles 
		achieved. A sleep cycle lasts 1.5 hours. Further you go from a regular fall asleep time of 14 min. This time can be changed in the settings.</b>
	    <br /><br />
    	<ol>
    	    <li>At the first pick a time.</li>
    	    <li>Hit the Go Button.</li>
    	    <li>Look at the output. You can click at a card and set the time as an alarm.</li>
    	</ol>
	    <br />
	    <b>Share my App, if you like it.</b>
	    <br /><br />
	    <small>You can find the How-to under the settings.</small>
	    ]]>
    </string>
    
	<!-- preferences -->
	<string name="cat1">Main Category</string>
	<string name="upd_fat1">Enable fall-asleep-time</string>
	<string name="upd_fat2">Enable or disable fall-asleep-time</string>
	<string name="upd_int1">Change fall-asleep-time</string>
	<string name="upd_int2">Define the fall-asleep-time. Default time is 14 minutes.</string>
	<string name="cat2">Sub Category</string>
	<string name="htu1">How to use</string>
	<string name="htu2">Please tell me what i can do!</string>
	<string name="sup">Support the Developer</string>
	<string name="noads">Note: This doesn\'t remove the Ads.</string>
	<string name="sup21">Donation</string>
	<string name="sup22">Thanks for supporting my work!</string>
	<string name="sup31">Donation XL</string>
	<string name="sup32">Thank you very much for supporting my work!</string>
	<string name="sup41">Donation XXL</string>
	<string name="sup42">Thanks, thanks, thanks for supporting my work!</string>
	<string name="fb1">Go to Play Store</string>
	<string name="fb2">Please give me a feedback on the play store!</string>
	<string name="fb3">Feedback</string>
	<string name="fb4">Please send me a feedback per email!</string>
	<string name="cred1">Credits</string>
	<string name="cred2">Thanks for the great Libraries!</string>

	<string name="list_card_undo_title">Undo</string>
	
	
</resources>